fix: white overflow

--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -61,7 +61,7 @@
   align-items: center;
   position: relative;
   margin: 8px auto 0;
-  aspect-ratio: 1.72 / 1;
+
   width: 100%;
   max-width: 450px;
 }
@@ -341,16 +341,24 @@
   position: absolute;
   z-index: 2;
   grid-template-rows: 100%;
+  column-gap: 2px;
 }
 
 .product-card__img-grid-item {
   width: 100%;
   height: 100%;
+  transition: all 0.2s linear;
   cursor: pointer;
+  box-sizing: border-box;
+
 }
+
+
+
 
 .product-card__img-grid-item-cache {
   visibility: hidden;
+  display: none;
 }
 
 .product-card__img-sliders {
